--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CRY_1LSu.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CnCGNt6_.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.C-bnkX53.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Zw3fMxOg.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.Bhs1tSRR.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CEDS4ELY.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BouBlC9I.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.qF-_BjJ4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CVCIRbl3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.C7KxbmEE.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.B0F67eRY.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DE4jL3FA.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BSWyZpVf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.BYBGtkZq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Bz2NPYZF.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DaYx6ny5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.mZg_uxW8.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.DZJjWlgn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.mJawlpSx.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1t6cf0y = {
+					__sveltekit_1lekjvd = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CRY_1LSu.js"),
-						import("./_app/immutable/entry/app.CEDS4ELY.js")
+						import("./_app/immutable/entry/start.C-bnkX53.js"),
+						import("./_app/immutable/entry/app.BouBlC9I.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
