deploy: 483d9d71b6043bb5e829fb79eed975fb3d786b78

--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BS2PnaDW.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CYnEddYZ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D0DMWJfG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.SzIUvU2q.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.Bhs1tSRR.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Cbfx3ral.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DlXybYRu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.qF-_BjJ4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CVCIRbl3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.C7KxbmEE.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.B0F67eRY.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Ca9X5WWC.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.dGlBa7Jq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.BYBGtkZq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CD0pPVsL.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BI8vT4b4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.mZg_uxW8.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.DZJjWlgn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.mJawlpSx.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_12thv68 = {
+					__sveltekit_1o2scep = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BS2PnaDW.js"),
-						import("./_app/immutable/entry/app.Cbfx3ral.js")
+						import("./_app/immutable/entry/start.D0DMWJfG.js"),
+						import("./_app/immutable/entry/app.DlXybYRu.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
