--- a/embeddings.html
+++ b/embeddings.html
@@ -9,27 +9,27 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D0DMWJfG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.SzIUvU2q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.Bhs1tSRR.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DlXybYRu.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/if.qF-_BjJ4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CVCIRbl3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/render.C7KxbmEE.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.B0F67eRY.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.dGlBa7Jq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/class.BYBGtkZq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BI8vT4b4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.mZg_uxW8.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/4.DZJjWlgn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/each.mJawlpSx.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.C21XPgsD.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Dt7yZtT6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.Cfu3TZaB.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CNDJZXm5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/if.CrFg0R_U.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.BwHU9XtL.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/render.DyuRvlSM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.C31to_Z9.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.zJsh4RdX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/class.Q5rfWiWm.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.EMYCFbbF.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.CPkF8AcE.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/4.B4ihkMAY.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/each.4IHYs5fX.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents"><!--[--><!--[--><!--[--><header class="svelte-1qgrqm"><h1 class="svelte-1qgrqm">OpenAI GUI Utils</h1> <nav class="svelte-1qgrqm"><a href="./" class="svelte-1qgrqm ">Home</a> <a href="completions" class="svelte-1qgrqm ">Completion API Visualizer</a> <a href="embeddings" class="svelte-1qgrqm ">Embeddings and Cosine Similarity Checker</a></nav> <!--[--><a href="https://github.com/baseballyama/openai-gui-utils" target="_blank" rel="noopener noreferrer"><svg version="1.1" width="32" height="32" viewBox="0 0 16 16" class="octicon octicon-mark-github svelte-92nypd svelte-1bvf986" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z" class="svelte-92nypd" style="fill: rgb(44, 62, 80);"></path></svg></a><!--]--></header> <main class="svelte-1qgrqm"><!--[--><!--[--><p class="openai-api-key svelte-1ruqg1j">OpenAI API key</p> <input placeholder="OpenAI API key" class="api-input svelte-1ruqg1j" value=""> <p class="input-error svelte-1ruqg1j"></p> <ul class="svelte-1ruqg1j"><li class="svelte-1ruqg1j">Sentence1</li> <li class="svelte-1ruqg1j">Sentence2</li> <li class="svelte-1ruqg1j">Cosine Similarity</li> <li class="svelte-1ruqg1j">Delete</li></ul> <!--[--><!--[--><ul class="svelte-1ruqg1j"><li class="svelte-1ruqg1j"><textarea placeholder="Input your sentence" class="svelte-1ruqg1j"></textarea> <!--[--><!--]!--></li> <li class="svelte-1ruqg1j"><textarea placeholder="Input your sentence" class="svelte-1ruqg1j"></textarea> <!--[--><!--]!--></li> <li class="svelte-1ruqg1j">(Not Embedded)</li> <li class="svelte-1ruqg1j"><button class="svelte-1ruqg1j">Delete</button></li></ul><!--]--><!--]--> <div class="buttons svelte-1ruqg1j"><button class="svelte-1ruqg1j">+ Add</button> <button class="execute-button svelte-1ruqg1j">Embeddings</button></div> <!--[--><!--]!--><!--]--><!--]--></main> <footer class="footer svelte-1qgrqm">Created by <a href="https://github.com/baseballyama" target="_blank" rel="noopener noreferrer" class="svelte-1qgrqm">baseballyama</a></footer><!--]--><!--]--> <!--[--><!--]!--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_1o2scep = {
+					__sveltekit_16c4tem = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D0DMWJfG.js"),
-						import("./_app/immutable/entry/app.DlXybYRu.js")
+						import("./_app/immutable/entry/start.C21XPgsD.js"),
+						import("./_app/immutable/entry/app.CNDJZXm5.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
