deploy: 7f9eb97dc7af74049b52a458fa56ba3f8e768c0e

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.C21XPgsD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Dt7yZtT6.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DxvO8kCu.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D4cMBSZC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.Cfu3TZaB.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CNDJZXm5.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Dgx1w9H4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.CrFg0R_U.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.BwHU9XtL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DyuRvlSM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.C31to_Z9.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.zJsh4RdX.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CIdOZgRf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.Q5rfWiWm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.EMYCFbbF.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BWOSEHkr.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.CPkF8AcE.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.BpPH_3nm.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_16c4tem = {
+					__sveltekit_t93tsk = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.C21XPgsD.js"),
-						import("./_app/immutable/entry/app.CNDJZXm5.js")
+						import("./_app/immutable/entry/start.DxvO8kCu.js"),
+						import("./_app/immutable/entry/app.Dgx1w9H4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
