deploy: 1d1183ff60d53735616ea63b4b1f3ae5d8c88f47

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DUsxc2Wz.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.uTb9ZwHn.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CfCuI-WB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BZOt9ecM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.Com-mcwW.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B6C9e3dk.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DGDfFwI8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.C45arFMi.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Y9V6ckG7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DGrrdymv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.C_FrsK1g.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DXC4BoQw.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.D0mO8CG7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.btnFpeQ3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DC9ZqKrn.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.D7RuI4Ly.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.BXt79Wm6.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.DB3QzFsk.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1w5m4wk = {
+					__sveltekit_b144e = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DUsxc2Wz.js"),
-						import("./_app/immutable/entry/app.B6C9e3dk.js")
+						import("./_app/immutable/entry/start.CfCuI-WB.js"),
+						import("./_app/immutable/entry/app.DGDfFwI8.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
