deploy: 2ebca5d8a81dfcac27fc19b2bb7567243c491041

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CfCuI-WB.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BZOt9ecM.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DM2JgM9c.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Yyu8XmgX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.Com-mcwW.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DGDfFwI8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DSD3XnRb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.C45arFMi.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Y9V6ckG7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DGrrdymv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.C_FrsK1g.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.D0mO8CG7.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DhGV9WN9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.btnFpeQ3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.D7RuI4Ly.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BFWjC3Ke.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.BXt79Wm6.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.DB3QzFsk.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_b144e = {
+					__sveltekit_116agr7 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CfCuI-WB.js"),
-						import("./_app/immutable/entry/app.DGDfFwI8.js")
+						import("./_app/immutable/entry/start.DM2JgM9c.js"),
+						import("./_app/immutable/entry/app.DSD3XnRb.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
