--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CqyMhUXl.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Bk9TphUn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.BIWlThYV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BntozVKa.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/if.DXgWr819.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.qmuNnzyg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/render.CKQd4rFi.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.B1D9IrjZ.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BDSu3y0a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/class.CaMZsIXb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DkArNKsg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.BHiWTH-U.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DQ_ieWgf.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CcCtB-34.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Ecmh2nIl.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.0OEdsQUF.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B82IIofR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/if.CP_jrhW0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.DmA4mDcw.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/render.DG949QjN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.CvUS6bEh.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.D5caCwYB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/class.CgU8zE-t.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BjStX3-C.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.Bqbb8sK0.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.v6APpeRC.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents"><!--[--><!--[--><!--[--><header class="svelte-1qgrqm"><h1 class="svelte-1qgrqm">OpenAI GUI Utils</h1> <nav class="svelte-1qgrqm"><a href="./" class="svelte-1qgrqm ">Home</a> <a href="completions" class="svelte-1qgrqm ">Completion API Visualizer</a> <a href="embeddings" class="svelte-1qgrqm ">Embeddings and Cosine Similarity Checker</a></nav> <!--[--><a href="https://github.com/baseballyama/openai-gui-utils" target="_blank" rel="noopener noreferrer"><svg version="1.1" width="32" height="32" viewBox="0 0 16 16" class="octicon octicon-mark-github svelte-92nypd svelte-1bvf986" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z" class="svelte-92nypd" style="fill: rgb(44, 62, 80);"></path></svg></a><!--]--></header> <main class="svelte-1qgrqm"><!--[--><!--[--><div class="top-page svelte-1azi8io"><p>This site contains small utilities that are frequently used when developing products using
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_qj8aqi = {
+					__sveltekit_18prr8d = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CqyMhUXl.js"),
-						import("./_app/immutable/entry/app.BntozVKa.js")
+						import("./_app/immutable/entry/start.CcCtB-34.js"),
+						import("./_app/immutable/entry/app.B82IIofR.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
