--- a/completions.html
+++ b/completions.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.D925Ie99.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CcCtB-34.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Ecmh2nIl.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Cjnvu43x.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DudYBg1j.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.0OEdsQUF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B82IIofR.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Cw0qeKHK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.CP_jrhW0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.DmA4mDcw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DG949QjN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.CvUS6bEh.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.D5caCwYB.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.C56Dn3hy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.CgU8zE-t.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BjStX3-C.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Ceipot_4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.Bqbb8sK0.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.Bot09BaG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.CCRwVATG.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_18prr8d = {
+					__sveltekit_ujay5x = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CcCtB-34.js"),
-						import("./_app/immutable/entry/app.B82IIofR.js")
+						import("./_app/immutable/entry/start.Cjnvu43x.js"),
+						import("./_app/immutable/entry/app.Cw0qeKHK.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
