deploy: 9afa068c08386cbe3132c9cebec4d6b49aa333ea

--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BpefGACv.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.cuAH01cJ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Coirz99X.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DqqnVMOF.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.0OEdsQUF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Cr8bAX79.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DubljUZo.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.CP_jrhW0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.DmA4mDcw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DG949QjN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.CvUS6bEh.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BJWVFy8j.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DGXl9Azy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.CgU8zE-t.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BaymhvLa.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BmPWyQId.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.Bqbb8sK0.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.2TmsakYJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.CCRwVATG.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_rjd829 = {
+					__sveltekit_vipat4 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BpefGACv.js"),
-						import("./_app/immutable/entry/app.Cr8bAX79.js")
+						import("./_app/immutable/entry/start.Coirz99X.js"),
+						import("./_app/immutable/entry/app.DubljUZo.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
