--- a/completions.html
+++ b/completions.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.D925Ie99.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Coirz99X.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DqqnVMOF.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DsEnVzS4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CIqsJ7uC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.0OEdsQUF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DubljUZo.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.D1AgC7-u.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.CP_jrhW0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.DmA4mDcw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DG949QjN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.CvUS6bEh.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DGXl9Azy.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CUj0-M__.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.CgU8zE-t.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BmPWyQId.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CQrC_xC7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.Bqbb8sK0.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.Bot09BaG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.CCRwVATG.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_vipat4 = {
+					__sveltekit_1xm3wmu = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Coirz99X.js"),
-						import("./_app/immutable/entry/app.DubljUZo.js")
+						import("./_app/immutable/entry/start.DsEnVzS4.js"),
+						import("./_app/immutable/entry/app.D1AgC7-u.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
