deploy: 5b46e7223287441a442fdf79d3e786289185feb3

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DsEnVzS4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CIqsJ7uC.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CUGQ8bzP.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D8bmjP6V.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.0OEdsQUF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.D1AgC7-u.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CaoZG_Ar.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.CP_jrhW0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.DmA4mDcw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DG949QjN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.CvUS6bEh.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CUj0-M__.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.D4PsUo-O.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.CgU8zE-t.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CQrC_xC7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DnhG-DP8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.Bqbb8sK0.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.v6APpeRC.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1xm3wmu = {
+					__sveltekit_15i7uet = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DsEnVzS4.js"),
-						import("./_app/immutable/entry/app.D1AgC7-u.js")
+						import("./_app/immutable/entry/start.CUGQ8bzP.js"),
+						import("./_app/immutable/entry/app.CaoZG_Ar.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
