deploy: 9b7607c106d61bee90813c440ae055143c833c5b

--- a/completions.html
+++ b/completions.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.D925Ie99.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.0wxUaS9U.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.C-Q_Zg8a.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DU0cdWXN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BmJi1n6F.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.C_tlSiHQ.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.rMgoIeW6.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B-fErh4w.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.pO_nrE3v.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.6aZjTlSh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DqZJeKMG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.DUYrQc2S.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.GJsiD74p.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Qgk5d7hM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.D9Ikmt_S.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CKRFC6K_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DvoTMW65.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.BL6Pav9f.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.CuW2zURY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.iuKU1YIr.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1lkc7w0 = {
+					__sveltekit_1m9cmpm = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.0wxUaS9U.js"),
-						import("./_app/immutable/entry/app.rMgoIeW6.js")
+						import("./_app/immutable/entry/start.DU0cdWXN.js"),
+						import("./_app/immutable/entry/app.B-fErh4w.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
