deploy: b27655bb822e9827909e3b017c2a2b3262fe4477

--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DQHezfSg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.B7Dzge6s.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BFCr6cem.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.C6wXZn9s.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.tknKwpXK.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B1Wg4yG-.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.RlZiqEIF.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.DCjCJQxR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.ClZd1kWz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.CHSTqAcL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.DPwpzln3.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.B8hOmd94.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.D90S_qnn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.BIYHsEeu.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BwCxtgzc.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.COw4rdvu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.CBGTy_xj.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.GaUu2wVI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.BHbggOm6.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1ucwixm = {
+					__sveltekit_5gr02c = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DQHezfSg.js"),
-						import("./_app/immutable/entry/app.B1Wg4yG-.js")
+						import("./_app/immutable/entry/start.BFCr6cem.js"),
+						import("./_app/immutable/entry/app.RlZiqEIF.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
