deploy: deb39f69624ea445c032870ace47e586807dd368

--- a/completions.html
+++ b/completions.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.D925Ie99.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.B2T2TAiA.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.XHRpMF56.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.2U6LHhIG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CIEf6j46.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.CJFtSYn6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.O6-caeON.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Y_7lKcY1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.mbGYOjtu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.BavRm7sN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.BpQ8EGGa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.Dk0yGZWL.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CkWtV19F.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BocqfnHa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.CFInq8Bn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CGKeh4KI.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DRmCosj6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.DoFWNFS0.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.C14T7RIu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.D0aEN7cu.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_v4rdn4 = {
+					__sveltekit_dxb7ee = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.B2T2TAiA.js"),
-						import("./_app/immutable/entry/app.O6-caeON.js")
+						import("./_app/immutable/entry/start.2U6LHhIG.js"),
+						import("./_app/immutable/entry/app.Y_7lKcY1.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
