deploy: f9d5d55184f4f0a089e230c3ebe276f7ba2def3e

--- a/embeddings.html
+++ b/embeddings.html
@@ -9,19 +9,19 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.2U6LHhIG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CIEf6j46.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BnnmiDfE.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Dh2xVa9W.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.CJFtSYn6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Y_7lKcY1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Da99nwRA.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.mbGYOjtu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.BavRm7sN.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/render.BpQ8EGGa.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/render.BVtRqqNt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.Dk0yGZWL.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BocqfnHa.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Cl3gK0ke.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.CFInq8Bn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DRmCosj6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BNFdFlk5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.DoFWNFS0.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/4.B1SVzQTJ.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/4.88yLX7XK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.D0aEN7cu.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_dxb7ee = {
+					__sveltekit_1v4d7na = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.2U6LHhIG.js"),
-						import("./_app/immutable/entry/app.Y_7lKcY1.js")
+						import("./_app/immutable/entry/start.BnnmiDfE.js"),
+						import("./_app/immutable/entry/app.Da99nwRA.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
