--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BnnmiDfE.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Dh2xVa9W.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D83zDANf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Cx4w8PSP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.CJFtSYn6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Da99nwRA.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BcgGoIwv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.mbGYOjtu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.BavRm7sN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.BVtRqqNt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.Dk0yGZWL.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Cl3gK0ke.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BpEejhtv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.CFInq8Bn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BNFdFlk5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DPkuG6Vt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.DoFWNFS0.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.DCHrbRWg.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1v4d7na = {
+					__sveltekit_1u41tkt = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BnnmiDfE.js"),
-						import("./_app/immutable/entry/app.Da99nwRA.js")
+						import("./_app/immutable/entry/start.D83zDANf.js"),
+						import("./_app/immutable/entry/app.BcgGoIwv.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
