deploy: 175f8814a6089ec9761600291c7cdfd0a7d5c1a0

--- a/completions.html
+++ b/completions.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.D925Ie99.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D83zDANf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Cx4w8PSP.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.C6Tebe7o.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.B0V5jgHi.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.CJFtSYn6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BcgGoIwv.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BQD2Hmlt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.mbGYOjtu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.BavRm7sN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.BVtRqqNt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.Dk0yGZWL.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BpEejhtv.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.G87wJL2l.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.CFInq8Bn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DPkuG6Vt.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.B_BX9qqZ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.DoFWNFS0.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.GwkkkCpZ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.D0aEN7cu.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1u41tkt = {
+					__sveltekit_shcam1 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D83zDANf.js"),
-						import("./_app/immutable/entry/app.BcgGoIwv.js")
+						import("./_app/immutable/entry/start.C6Tebe7o.js"),
+						import("./_app/immutable/entry/app.BQD2Hmlt.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
