deploy: d064e1a2ea49fa0467d4bb2d9f7fd6eb35db5fd1

--- a/completions.html
+++ b/completions.html
@@ -9,19 +9,19 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.D925Ie99.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.QxiwJnIh.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Cb1qFuHI.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BNFTxHbA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CmJcVUS7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.CJFtSYn6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BknIiLae.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BvQ9zY1D.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.mbGYOjtu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.BavRm7sN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.BVtRqqNt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.Dk0yGZWL.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DaDO62rZ.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BZcFkxIw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.CFInq8Bn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CBtMNpSj.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.4-yoA_YB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.DoFWNFS0.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.GwkkkCpZ.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.BtIcqHwI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.D0aEN7cu.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_175h5ro = {
+					__sveltekit_1bsd2j7 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.QxiwJnIh.js"),
-						import("./_app/immutable/entry/app.BknIiLae.js")
+						import("./_app/immutable/entry/start.BNFTxHbA.js"),
+						import("./_app/immutable/entry/app.BvQ9zY1D.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
